examples/test/testpolicy6052.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6052
  namespace: namespace371
spec:
  podSelector:
    matchLabels:
      key17: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value20
          key27: value36
      podSelector:
        matchLabels:
          key15: value23
          key48: value5
